--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
 body{
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  overflow-x: hidden !important;
+  overflow: hidden !important;
   width: 100vw !important;
 }
 
